src/main/java/com/example/citron/web/errors/harvest/HarvestExistInSeasonException.java
package com.example.citron.web.errors.harvest;

public class HarvestExistInSeasonException extends RuntimeException {
    public HarvestExistInSeasonException(String message) {
        super(message);
    }
}
